[package]
name = "core"
version = "0.1.0"
authors = ["Shieber <QMH_XB_FLTMY@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils  = { path = "../utils" }
chrono = { version = "0.4.19" }
serde  = { version = "1.0.123", features = ["derive"] }
